scrollbar mozilla fix

--- a/src/client/styles/base.css
+++ b/src/client/styles/base.css
@@ -1,6 +1,7 @@
 body {
   background-color: #ededed;
   display: flex;
+  scrollbar-color: #fca311 #f1f1f1;
 }
 
 nav,
